2009-03-02  higepon  <higepon@users.sourceforge.jp>

        * BlockBufferedFileBinaryInputOutputPort.h : Added.

        * LineBufferedFileBinaryInputOutputPort.h : Added.

        * Makefile.am (test): Added test/input-output-port.scm to Makefile.asm

        * BufferedFileBinaryInputOutputPort.cpp (BufferedFileBinaryInputOutputPort): Passes all tests in input-output-port.scm

2009-02-27  higepon  <higepon@users.sourceforge.jp>

        * test/input-output-port.scm : Just passed simple tests.

2009-02-26  higepon  <higepon@users.sourceforge.jp>

        * ProcedureMacro.h : I found a dangerous reinterpret_cast<BinaryInputOutputPort*>. This doesn' work.

2009-02-25  kokosabu  <kokosabu@gmail.com>

        * Added : output-port-buffer-mode.

2009-02-25  higepon  <higepon@users.sourceforge.jp>

        * test/input-output-port.scm : Added.

2009-02-24  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryInputOutputPort.cpp (BufferedFileBinaryInputOutputPort::fillBuffer): Added some implementations.

2009-02-23  kokosabu  <kokosabu@gmail.com>

        * Added BlockBufferedBinaryOutputPort.h,
                LineBufferedBinaryOutputPort.h,
                StandardErrorOutputPort.h

2009-02-23  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryInputOutputPort.cpp : Added (Not implemented yet).

        * Added tests for call-with-port.

        * Added peek-char and tests.

        * Moved close() from BinarInputPort to Port Class.

        * test/input-port.scm : Added tests for (get-line textual-input-port).

2009-02-22  higepon  <higepon@users.sourceforge.jp>

        * Added get-datum. get-datum and read raise &lexical and &i/o-read when error occurs.

        * PortProcedures.cpp : Added get-bytevector-all, get-string-n! and get-string-all.

        * PortProcedures.cpp : Added get-bytevector-some.

2009-02-22  kokosabu  <kokosabu@gmail.com>

        * BufferedFileBinaryOutputPort.cpp : Added.
