@@ -131,6 +131,7 @@ Latin1Codec.h                  Latin1Codec.cpp                     \
 FFI.h                          FFI.cpp                             \
 FFIProcedures.h                FFIProcedures.cpp                   \
 CustomBinaryOutputPort.h       CustomBinaryOutputPort.cpp          \
+FileBinaryInputOutputPort.h    FileBinaryInputOutputPort.cpp       \
 BufferedFileBinaryInputOutputPort.h  BufferedFileBinaryInputOutputPort.cpp
 
 mosh_core_libraries = \
